# booru-nsfw-anime-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  providers.yml  pyproject.toml
app/: bot.py  channel_posting.py  config.py  database.py  db.py  group_posting.py  keyboards.py  loading.py  models.py  premium.py  providers.py  random_art.py  safety.py  telegram_setup.py
app/handlers/: admin.py  catalog.py  channel.py  favorites.py  group_posting.py  menu.py  providers.py  random_art.py  search.py  sources.py  start.py
app/providers/: __init__.py  base.py  catalog.py  danbooru.py  download.py  gelbooru.py  moebooru.py  philomena.py  prober.py  providers.yml  registry.py  rule34.py  shimmie.py  source_registry.py
app/providers/engines/: danbooru.py  gelbooru.py  moebooru.py  philomena.py  shimmie.py  szurubooru.py
app/services/: channel_posting.py  media.py  providers.py
app/ui/: sessions.py  tags.py  texts.py
tests/: test_catalog_workflow.py  test_channel_posting.py  test_core.py  test_database.py  test_download.py  test_provider_registry.py  test_providers.py  test_proxy.py  test_safety.py  test_search_rendering.py  test_source_registry.py  test_tag_usage_group_posting.py  test_telegram_setup.py  test_ui_callbacks.py  test_ui_tags.py
