[project]
name = "booru-nsfw-anime-bot"
version = "0.1.0"
description = "Telegram bot for NSFW anime booru search"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.8,<4",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.3,<3",
  "aiosqlite>=0.20,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
