[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "booru-nsfw-anime-bot"
version = "0.1.0"
description = "Telegram bot for NSFW anime booru search"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.8,<4",
  "httpx[socks]>=0.27,<1",
  "Pillow>=10,<12",
  "aiohttp-socks>=0.9,<1",
  "python-socks>=2.4,<3",
  "socksio>=1.0,<2",
  "pydantic-settings>=2.3,<3",
  "python-dotenv>=1,<2",
  "aiosqlite>=0.20,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
